Fix FA to v4.7, update theme styling and spacing, update skills and services

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -25,6 +25,22 @@
   font-weight: bold;
 }
 
-.container {
-  padding-bottom: 25px;
+.icon {
+  display: inline;
+  height: 200px;
+  width: 100px;
+  font-size: 60px;
+  line-height: 60px;
+}
+
+.section {
+  margin: 3em 0em;
+}
+
+.skill {
+  margin: 1.5em 0em;
+}
+
+.intro-text {
+  font-weight: normal;
 }
